# ini2toml_requirements

./: .gitignore  LICENSE  TODO.txt  pyproject.toml
ini2toml_contrib_requirements/: __init__.py  requirements_plugin.py
test/: test_options.py
