[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
name = "ini2toml-contrib-requirements"
description = "README.md"

authors = [{name = "whichoneiwonder"}]
version = "0.0.1"
dependencies = [
    "ini2toml[lite]~=0.12"
]


[project.optional-dependencies]
test = [
    "pip-requirements-parser~=32.0",
    "pytest-black",
    "pytest",
]

[project.entry-points]
"ini2toml.processing" = {requirements = "ini2toml_contrib_requirements:activate"}


[tool.pytest.ini_options]
addopts = [
    "--black"
]
